[gd_scene load_steps=3 format=2]

[ext_resource path="res://test_scenes/TestBonusBox.gd" type="Script" id=1]
[ext_resource path="res://scenes/BonusSpawn.tscn" type="PackedScene" id=2]

[node name="TestBonusBox" type="Node2D"]
script = ExtResource( 1 )

[node name="BonusSpawn" parent="." instance=ExtResource( 2 )]
position = Vector2( 112.5, 100.5 )

[node name="Disable" type="Button" parent="."]
margin_left = 387.0
margin_top = 76.5
margin_right = 537.0
margin_bottom = 141.5
text = "Disable"

[node name="Enable" type="Button" parent="."]
margin_left = 378.0
margin_top = 244.5
margin_right = 528.0
margin_bottom = 309.5
text = "Enable"

[node name="Award" type="Button" parent="."]
margin_left = 382.5
margin_top = 159.0
margin_right = 532.5
margin_bottom = 224.0
text = "Award"
[connection signal="pressed" from="Disable" to="." method="_on_Disable_pressed"]
[connection signal="pressed" from="Enable" to="." method="_on_Enable_pressed"]
[connection signal="pressed" from="Award" to="." method="_on_Award_pressed"]
